# scs-did-creator

./: .coveragerc  .gitignore  LICENSE  README.md  config.template.yaml  config.yaml  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  test-requirements.in  test-requirements.txt
.github/workflows/: build-python-app.yml  code-coverage.yml  pr-badge.yml
creator/: cli.py  did_gen.py
creator/templates/: did.j2  ec_jwk.j2  rsa_jwk.j2
tests/: test_cli.py  test_did_gen.py
